# Play-with-Algorithms

./: README.md
02-Sorting-Basic/01-Selection-Sort/lib/: CMakeLists.txt  SelectionSort.cpp  SelectionSort.h
02-Sorting-Basic/01-Selection-Sort/src/: CMakeLists.txt  main.cpp
02-Sorting-Basic/02-Selection-Sort-Using-Template/: CMakeLists.txt
02-Sorting-Basic/02-Selection-Sort-Using-Template/inc/: CMakeLists.txt  Student.h
02-Sorting-Basic/02-Selection-Sort-Using-Template/lib/: CMakeLists.txt  SelectionSort.h
02-Sorting-Basic/02-Selection-Sort-Using-Template/src/: CMakeLists.txt  main.cpp
02-Sorting-Basic/src/01-Selection-Sort/: CMakeLists.txt  main.cpp
